--- a/app/src/main/res/layout/fragment_book_description.xml
+++ b/app/src/main/res/layout/fragment_book_description.xml
@@ -79,6 +79,25 @@
                         android:textColor="@color/green_main"
                         tools:text="Ali@mail.ru" />
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_heart" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            app:srcCompat="@drawable/ic_plus" />
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
